# caffeine-app-mvp

./: CMakeLists.txt  CMakePresets.json  README.md  SKILL.md
.github/workflows/: ci.yml
src/: main.c
src/app/: app_main.c  app_main.h
src/bsp/: bsp_led.c  bsp_led.h
tests/: CMakeLists.txt
tests/app/: test_app.cpp
